Expand the README and create migrations for the backend
Development: Add 'setup.bash' to kickstart development
Backend: Added 20170214020829_create_tables migrations

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,3 +10,6 @@ rocket = "0.2.0"
 serde_json = "0.9.6"
 rocket_contrib = "0.2.0"
 serde_derive = "0.9.6"
+diesel = "0.10"
+diesel_codegen = { version = "0.10", features = ["sqlite"] }
+dotenv = "0.8"
